Create Organigram component

--- a/organigram/example/public/index.html
+++ b/organigram/example/public/index.html
@@ -7,7 +7,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 
-    <title>@milenammay/organigram</title>
+    <title>Organigram Example</title>
   </head>
 
   <body>
